# Random-Person-Generator

./: .gitignore  BackEnd.Dockerfile  README.md  docker-compose.yaml
api/: pyproject.toml
api/src/: get_all_persons.py  main.py  person_db_generator.py
api/src/dataBase/: db.json
api/src/routes/: persons.py
backend/: pyproject.toml
backend/src/: get_all_persons.py  main.py  models.py  person_db_generator.py
backend/src/dataBase/: db.json
backend/src/routes/: persons.py
frontend/src/: App.js
