[tool.poetry]
name = "Random person Generator api"
version = "0.1.0"
description = "A simple api to generate random person"
authors = ["Mcccartheney Mendes <mccartheney@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
pydantic = "^2.7.0"
Faker = "^24.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
