[tool.poetry]
name = "random person generator api"
version = "0.1.0"
description = "A api that generate fake persons"
authors = ["mccartheney <mccartheney@hotmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include : "./src/*.py"}
]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
