[tool.poetry]
name = "random person generator api"
version = "0.1.0"
description = "A api that generate fake persons"
authors = ["mccartheney <mccartheney@hotmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "./src/*.py"}
]

[tool.poetry.dependencies]
python = "^3.11.7"
fastapi = "^0.110.1"
pydantic = "^2.7.0"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
